# chawk

./: .gitignore  CHANGELOG.md  LICENSE  LICENSE.md  README.md  announcements.go  auth.go  chawk.go  client.go  courses.go  discssion.go  examples.md  formatting.go  go.mod  go.sum  gradebook.go  input.go  pyproject.toml  users.go
.github/workflows/: publish-to-pypi.yml
debug/: debug.go
endpoints/: announcements.go  auth.go  courses.go  discussions.go  gradebook.go  users.go
src/chawk/: announcement.py  blackboard_client.py  course_client.py  discussion_client.py  endpoint_client.py  exceptions.py  formatting.py  grade_client.py  logger_client.py  user_client.py
