[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"


[project]
name = "chawk"
version = "0.1.7"
authors = [
  { name = "sugarvoid", email = "author@example.com" },
]
description = "An API wrapper library for the Blackboard LMS."
keywords = ["blackboard", "api", "wrapper", "lms"]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries",
  "Intended Audience :: Developers",
]
license = "MIT"
license-files = ["LICENSE*"]

dependencies = [
  "certifi==2024.12.14",
  "charset-normalizer==3.4.0",
  "idna==3.10",
  "oauthlib==3.2.2",
  "python-dotenv==1.0.1",
  "requests>=2.32,<3.0",
  "requests-oauthlib==2.0.0",
  "urllib3==2.3.0"
]

[project.urls]
Homepage = "https://github.com/sugarvoid/chawk"
Issues = "https://github.com/sugarvoid/chawk/issues"